Ajustes en Geoprocesamiento y ortografía de Intro

--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -2,13 +2,13 @@
 
 <div class=text-justify>
 
-En el siglo XXI la humanidad se ha vuelto, de forma quizás definitiva, una especie urbana. La mayoría de las personas del planeta viven en ciudades, y muchísimas se han trasladado en los últimos años, en un proceso global de migración desde regiones rurales que aún continúa. Nuestras ciudades crecen muy rápido, superando nuestra capacidad de planificación, mientras el incremento de demanda generando una enorme presión sobre los servicios que las ciudades brindan. Es evidente que vamos a necesitar redoblar esfuerzos. Para llebar a cabo una gestión apropiada que permita sostener los servicios que las ciudades brindan, pero no sólo ello: también mejorar la calidad de vida de las personas que allí habitan, a la vez que preservamos el ambiente. ¿Cómo podemos prepararnos para semejante desafío desde nuestro lugar de urbanistas?
+En el siglo XXI la humanidad se ha vuelto, de forma quizás definitiva, una especie urbana. La mayoría de las personas del planeta viven en ciudades, y muchísimas se han trasladado en los últimos años, en un proceso global de migración desde regiones rurales que aún continúa. Nuestras ciudades crecen muy rápido, superando nuestra capacidad de planificación, mientras el incremento de demanda genera una enorme presión sobre los servicios que las ciudades brindan. Es evidente que vamos a necesitar redoblar esfuerzos para llevar a cabo una gestión apropiada que permita sostener los servicios que las ciudades brindan, pero no sólo ello: también mejorar la calidad de vida de las personas que allí habitan, a la vez que preservamos el ambiente. ¿Cómo podemos prepararnos para semejante desafío desde nuestro lugar de urbanistas?
 
 Es aquí donde entran en juego los cambios tecnológicos ocurridos en los últimos años. Estos cambios presentan un gran desafío tanto en términos de gestión cómo de planificación urbana. Hasta ahora nunca habíamos podido acceder a tantos datos, ni a tanta capacidad para procesarlos, comprenderlos y utilizarlos para tomar mejores decisiones.
 
 Hoy en día todas las personas generamos datos en forma constante al interactuar con nuevas tecnologías. Cuando utilizamos el transporte público con algún sistema de boleto electrónico, cuando participamos en las redes sociales, o cuando utilizamos algún dispositivo digital, estamos generando una masiva cantidad de datos, que superan con creces el volumen, la variedad y la velocidad que existe en los clásicos registros administrativos que los gobiernos utilizan hace años.
 
-Entonces, entendiendo que las ciudades son los sitios donde más personas habitan, es lógico que allí se genere la mayor cantidad de información. Contar con estos grandes volúmenes de datos puede, y debe, servir para que los gobiernos tomen decisiones basadas en evidencia. Es decir, que puedan caracterizar, cuantificar, y comparar tanto los esfuerzos vertidos como los resultados logrados en los proyectos de gestión pública. Al contar con  resultados y alternativas comparables para elegir  la calidad vida de los ciudadanos. Pero ¿Cómo podemos hacer para aprovechar todos estos datos que se generan de forma masiva y constante? La respuesta es simple: Para comprender el presente y planificar el futuro aprovechando los datos de las ciudades debemos hacer uso de herramientas de **analítica urbana**, las cuales serán desarrolladas a lo largo de este libro. 
+Entonces, entendiendo que las ciudades son los sitios donde más personas habitan, es lógico que allí se genere la mayor cantidad de información. Contar con estos grandes volúmenes de datos puede, y debe, servir para que los gobiernos tomen decisiones basadas en evidencia. Es decir, que puedan caracterizar, cuantificar, y comparar tanto los esfuerzos vertidos como los resultados logrados en los proyectos de gestión pública al contar con resultados y alternativas comparables para elegir la calidad de vida de los ciudadanos. Pero ¿Cómo podemos hacer para aprovechar todos estos datos que se generan de forma masiva y constante? La respuesta es simple: Para comprender el presente y planificar el futuro aprovechando los datos de las ciudades debemos hacer uso de herramientas de **analítica urbana**, las cuales serán desarrolladas a lo largo de este libro. 
 
 </div>
 
@@ -18,7 +18,7 @@ Entonces, entendiendo que las ciudades son los sitios donde más personas habita
 
 <div class=text-justify>
 
-La analítica urbana es un campo multidisciplinario que abarca conocimientos de tipo teórico sobre las cuestión urbana (que ayuda a pensar en el "qué", en cuales son las preguntas de interés) junto a  capacidades técnicas que habilitan el "cómo": permiten extraer conocimiento de los datos para describir algo que ya sucedió (estadística descriptiva) y realizar predicciones de algo que ocurrirá (modelos predictivos). 
+La analítica urbana es un campo multidisciplinario que abarca conocimientos de tipo teórico sobre las cuestión urbana, ayudando a pensar en el "qué", en cuales son las preguntas de interés, junto a capacidades técnicas que habilitan el "cómo": permiten extraer conocimiento de los datos para describir algo que ya sucedió (estadística descriptiva) y realizar predicciones de algo que ocurrirá (modelos predictivos). 
 
 </div>
 
